--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="csrf-token" content="{{ csrf_token() }}">
-    <title>{{ title|default('Everlast HR System') }}</title>
+    <title>{{ title|default('Everlast ERP') }}</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
     
     <!-- Core CSS -->
     <link href="{{ url_for('static', filename='css/metronic.css') }}" rel="stylesheet" />
@@ -75,7 +79,7 @@
 <body class="sb-nav-fixed" data-user-role="{{ current_user.role if current_user.is_authenticated else 'guest' }}">
     <!-- Top Navigation -->
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand ps-3" href="{{ url_for('dashboard.index') }}">Everlast HR System</a>
+        <a class="navbar-brand ps-3" href="{{ url_for('dashboard.index') }}">Everlast ERP</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!">
             <i class="fas fa-bars"></i>
         </button>
@@ -227,7 +231,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Everlast Wellness {{ now.year }}</div>
+                        <div class="text-muted">Copyright &copy; Everlast ERP {{ now.year }}</div>
                     </div>
                 </div>
             </footer>
