--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="content-header">
-    <h1 class="page-title">Welcome to Everlast HR System</h1>
+    <h1 class="page-title">Welcome to Everlast ERP</h1>
 </div>
 
 <div class="row">
